<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion_titre"
        android:gravity="center"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/nom_utilisateur"
        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/nom_utilisateur"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/mot_de_passe"
        android:layout_width="fill_parent"
        android:hint="@string/mot_de_passe"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_se_connecter"
        android:layout_marginTop="50dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/purple_700"
        android:text="@string/lien_mot_oublie"
        android:gravity="right"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/fjghifgb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_creer_compte"
        android:layout_marginTop="50dp"
        />


</LinearLayout>