<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paiement_titre"
        android:gravity="center"
        android:layout_marginTop="20dp"

        />

    <EditText

        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/numero_carte"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText

        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/date_validite"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText

        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/cryptogramme"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payer"
        android:layout_marginTop="50dp"
        />

</LinearLayout>