<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creer_un_compte_titre"
        android:gravity="center"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/nom_utilisateur"
        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/nom_utilisateur"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/mot_de_passe_compte"
        android:layout_width="fill_parent"
        android:hint="@string/mot_de_passe"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:hint="@string/confirmer_mot"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_enregistrer"
        android:layout_marginTop="50dp"

        />



</LinearLayout>