<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_mot_de_passe_titre"
        android:gravity="center"
        android:layout_marginTop="20dp"

        />


    <EditText

        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/nom_utilisateur"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText

        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_envoyer_mot_de_passe"
        android:layout_marginTop="50dp"
        />


</LinearLayout>